--- a/Ekert.ipynb
+++ b/Ekert.ipynb
@@ -16,21 +16,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "89864c1d",
    "metadata": {},
    "outputs": [],
    "source": [
     "class CHSH_game:\n",
-    "    def __init__(self, rounds, eavesdrop=0): # eavesdrop = (0: none); (1: triplet entanglement); (2: intercept-resend)\n",
+    "    def __init__(self, rounds, eavesdrop=0, noise=0,): # eavesdrop = (0: none); (1: triplet entanglement); (2: intercept-resend)\n",
     "        self.rounds = rounds\n",
     "        self.eavesdrop = eavesdrop\n",
     "        self.choices = [None, None]\n",
+    "        self.noise = noise\n",
     "#         self.basis = [[0, pi/8, pi/4], [0, pi/8, -pi/8], [0, 0, 0]]\n",
     "        self.basis = [[0, pi/4, pi/2], [0, pi/4, -pi/4], [0, 0, 0]]\n",
     "        self.game = [None]\n",
     "        self.output = [[], []]\n",
     "        self.key = [[], []]\n",
+    "        self.raw_key = [[], []]\n",
     "        self.s_val = 0\n",
     "        if eavesdrop == 1: # three qubits entanglement\n",
     "            self.choices.append(None)\n",
@@ -41,6 +43,19 @@
     "            self.basis[2] = [0, pi/4]\n",
     "            self.output.extend([[], []])\n",
     "            self.key.extend([[], []])\n",
+    "    \n",
+    "    def noise_process(self):\n",
+    "        for u in [0,1]:\n",
+    "            for i in range(len(self.raw_key[u])):\n",
+    "                flip = np.random.choice(2, 1, p = [1-self.noise, self.noise])\n",
+    "                if flip == 0:\n",
+    "                    self.key[u].append(self.raw_key[u][i])\n",
+    "                elif flip == 1:\n",
+    "                    if self.raw_key[u][i] == 0:\n",
+    "                        self.key[u].append(1)\n",
+    "                    elif self.raw_key[u][i] == 1:\n",
+    "                        self.key[u].append(0)\n",
+    "                \n",
     "        \n",
     "    def create_round(self):\n",
     "        alice = QuantumRegister(1, 'alice')\n",
@@ -104,8 +119,8 @@
     "        test = [[], [], [], []] #01+02+21-22\n",
     "        for i in range(self.rounds):\n",
     "            if self.choices[0][i] == self.choices[1][i] and self.choices[0][i] != 2:\n",
-    "                self.key[0].append(self.output[0][i])\n",
-    "                self.key[1].append(self.output[1][i])\n",
+    "                self.raw_key[0].append(self.output[0][i])\n",
+    "                self.raw_key[1].append(self.output[1][i])\n",
     "                if self.eavesdrop == 1:\n",
     "                    self.key[2].append(self.output[2][i])\n",
     "                elif self.eavesdrop == 2:\n",
@@ -121,7 +136,9 @@
     "                test[2].append(ans)\n",
     "            elif self.choices[0][i] == 2 and self.choices[1][i] == 2:\n",
     "                test[3].append(ans)\n",
-    "    \n",
+    "                \n",
+    "        self.noise_process()\n",
+    "        \n",
     "        avg = [0, 0, 0, 0]\n",
     "        for i in range(4):\n",
     "            item = test[i]\n",
@@ -225,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "9cd509dd",
    "metadata": {},
    "outputs": [
@@ -233,8 +250,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Pass CHSH test! s value = 2.721437\n",
-      "Key length = 213\n"
+      "Pass CHSH test! s value = 2.843454\n",
+      "Key length = 228\n"
      ]
     }
    ],
@@ -312,8 +329,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "b075ab85",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 10, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [1,2,3]\n",
+    "for i in range(len(a)):\n",
+    "    if a[i] == 2:\n",
+    "        a[i] = 10\n",
+    "print(a)\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "6d69b15d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pass CHSH test! s value = 3.003122\n",
+      "Key length = 212\n",
+      " Key mismatach! diff: 35/212\n"
+     ]
+    }
+   ],
+   "source": [
+    "rounds = 1000\n",
+    "game = CHSH_game(rounds, 0, 0.1)\n",
+    "game.start()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c95640aa",
    "metadata": {},
    "outputs": [],
    "source": []
