--- a/Ekert.ipynb
+++ b/Ekert.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "e7b40631",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 3,
    "id": "89864c1d",
    "metadata": {},
    "outputs": [],
@@ -107,50 +107,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 4,
    "id": "cffa5d6c",
    "metadata": {},
    "outputs": [],
    "source": [
     "rounds = 1000\n",
-    "game = CHSH_game(rounds, False)\n",
+    "game = CHSH_game(rounds, True)\n",
     "game.start()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 5,
    "id": "1ddf2471",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<pre style=\"word-wrap: normal;white-space: pre;background: #fff0;line-height: 1.1;font-family: &quot;Courier New&quot;,Courier,monospace\">       ┌───┐     ┌─────────┐ ┌─┐   \n",
-       "alice: ┤ H ├──■──┤ Ry(π/4) ├─┤M├───\n",
-       "       └───┘┌─┴─┐├─────────┴┐└╥┘┌─┐\n",
-       "  bob: ─────┤ X ├┤ Ry(-π/8) ├─╫─┤M├\n",
-       "            └───┘└──────────┘ ║ └╥┘\n",
-       "m_a: 1/═══════════════════════╩══╬═\n",
-       "                              0  ║ \n",
-       "                                 ║ \n",
-       "m_b: 1/══════════════════════════╩═\n",
-       "                                 0 </pre>"
+       "<pre style=\"word-wrap: normal;white-space: pre;background: #fff0;line-height: 1.1;font-family: &quot;Courier New&quot;,Courier,monospace\">       ┌───┐     ┌───────┐┌─┐                  \n",
+       "alice: ┤ H ├──■──┤ Ry(0) ├┤M├──────────────────\n",
+       "       └───┘┌─┴─┐└───────┘└╥┘┌──────────┐┌─┐   \n",
+       "  bob: ─────┤ X ├────■─────╫─┤ Ry(-π/8) ├┤M├───\n",
+       "            └───┘  ┌─┴─┐   ║ └┬───────┬─┘└╥┘┌─┐\n",
+       "  eve: ────────────┤ X ├───╫──┤ Ry(0) ├───╫─┤M├\n",
+       "                   └───┘   ║  └───────┘   ║ └╥┘\n",
+       "m_a: 1/════════════════════╩══════════════╬══╬═\n",
+       "                           0              ║  ║ \n",
+       "                                          ║  ║ \n",
+       "m_b: 1/═══════════════════════════════════╩══╬═\n",
+       "                                          0  ║ \n",
+       "                                             ║ \n",
+       "m_e: 1/══════════════════════════════════════╩═\n",
+       "                                             0 </pre>"
       ],
       "text/plain": [
-       "       ┌───┐     ┌─────────┐ ┌─┐   \n",
-       "alice: ┤ H ├──■──┤ Ry(π/4) ├─┤M├───\n",
-       "       └───┘┌─┴─┐├─────────┴┐└╥┘┌─┐\n",
-       "  bob: ─────┤ X ├┤ Ry(-π/8) ├─╫─┤M├\n",
-       "            └───┘└──────────┘ ║ └╥┘\n",
-       "m_a: 1/═══════════════════════╩══╬═\n",
-       "                              0  ║ \n",
-       "                                 ║ \n",
-       "m_b: 1/══════════════════════════╩═\n",
-       "                                 0 "
+       "       ┌───┐     ┌───────┐┌─┐                  \n",
+       "alice: ┤ H ├──■──┤ Ry(0) ├┤M├──────────────────\n",
+       "       └───┘┌─┴─┐└───────┘└╥┘┌──────────┐┌─┐   \n",
+       "  bob: ─────┤ X ├────■─────╫─┤ Ry(-π/8) ├┤M├───\n",
+       "            └───┘  ┌─┴─┐   ║ └┬───────┬─┘└╥┘┌─┐\n",
+       "  eve: ────────────┤ X ├───╫──┤ Ry(0) ├───╫─┤M├\n",
+       "                   └───┘   ║  └───────┘   ║ └╥┘\n",
+       "m_a: 1/════════════════════╩══════════════╬══╬═\n",
+       "                           0              ║  ║ \n",
+       "                                          ║  ║ \n",
+       "m_b: 1/═══════════════════════════════════╩══╬═\n",
+       "                                          0  ║ \n",
+       "                                             ║ \n",
+       "m_e: 1/══════════════════════════════════════╩═\n",
+       "                                             0 "
       ]
      },
-     "execution_count": 42,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
