--- a/Ekert_3noise.ipynb
+++ b/Ekert_3noise.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 27,
    "id": "89864c1d",
    "metadata": {},
    "outputs": [],
@@ -184,26 +184,30 @@
     "        self.s_val = abs(sum(avg) - 2*avg[3])\n",
     "#         print(avg)\n",
     "\n",
-    "        # Key extraction\n",
+    "        # Modified -- Key extraction\n",
+    "        print(test_rounds)\n",
     "        matches = 0\n",
     "        key_test_rounds = 0\n",
     "        self.final_key = []\n",
-    "        for i, r in enumerate(key_rounds):\n",
-    "            if test_rounds[r]: # is a test round && key round\n",
-    "                key_test_rounds += 1\n",
-    "                if self.key[0][i] == self.key[1][i]:\n",
-    "                    matches += 1\n",
+    "        if self.modified:\n",
+    "            for i, r in enumerate(key_rounds):\n",
+    "                if test_rounds[r]: # is a test round && key round\n",
+    "                    key_test_rounds += 1\n",
+    "                    if self.key[0][i] == self.key[1][i]:\n",
+    "                        matches += 1\n",
+    "                else:\n",
+    "                    self.final_key.append(self.key[0][i])\n",
+    "\n",
+    "            if key_test_rounds != 0:\n",
+    "                resemblance = matches / key_test_rounds\n",
+    "                if resemblance < 1 - self.eta:\n",
+    "                    print(\"Fail key resemblance test! Key resemblance = %f\" % resemblance)\n",
+    "                else:\n",
+    "                    print(\"Pass key resemblance test! Key resemblance = %f\" % resemblance)\n",
     "            else:\n",
-    "                self.final_key.append(self.key[0][i])\n",
-    "                \n",
-    "        if key_test_rounds != 0:\n",
-    "            resemblance = matches / key_test_rounds\n",
-    "            if resemblance < 1 - self.eta:\n",
-    "                print(\"Fail key resemblance test! Key resemblance = %f\" % resemblance)\n",
-    "            else:\n",
-    "                print(\"Pass key resemblance test! Key resemblance = %f\" % resemblance)\n",
+    "                print(\"No key resemblance test.\")\n",
     "        else:\n",
-    "            print(\"No key resemblance test.\")\n",
+    "            self.final_key = self.key[0]\n",
     "        \n",
     "        # CHSH test\n",
     "        if self.s_val > 2:\n",
@@ -2459,7 +2463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 26,
    "id": "6d69b15d",
    "metadata": {},
    "outputs": [
@@ -2467,15 +2471,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Pass key resemblance test! Key resemblance = 1.000000\n",
-      "Pass CHSH test! s value = 2.973737\n",
-      "Key length = 9\n"
+      "[1 1 1 0 1 0 0 1 1 0 0 1 1 0 0 0 1 1 1 0 1 1 1 0 0 0 0 1 0 0 0 1 1 0 1 1 1\n",
+      " 1 1 1 0 1 1 0 1 0 1 0 0 0 1 0 0 0 1 1 0 1 0 0 0 1 0 0 1 0 0 1 0 0 1 0 1 0\n",
+      " 0 1 1 1 1 1 1 0 1 1 0 1 1 0 1 0 0 0 1 0 1 0 0 0 0 1]\n",
+      "Fail key resemblance test! Key resemblance = 0.928571\n",
+      "Pass CHSH test! s value = 2.333333\n",
+      "Key length = 11\n",
+      " Key mismatach! diff: 1/25\n"
      ]
     }
    ],
    "source": [
     "rounds = 100\n",
-    "game = CHSH_game(rounds, eavesdrop=0, key_noise=0.01, meas_noise=0, ch_noise=0, modified=True, gamma=0.05, eta=0.02)\n",
+    "game = CHSH_game(rounds, eavesdrop=0, key_noise=0.01, meas_noise=0, ch_noise=0, modified=False, gamma=0.05, eta=0.02)\n",
     "game.start()"
    ]
   },
